--- a/index.html
+++ b/index.html
@@ -1,93 +1,152 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   <style>
-  body{
-  padding: 0;
-  margin: 0;
-}
-.middle{
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 100%;
-  text-align: center;
-}
-.btn{
-  display: inline-block;
-  width: 90px;
-  height: 90px;
-  background: #f1f1f1;
-  margin: 10px;
-  border-radius: 30%;
-  box-shadow: 0 5px 15px -5px #00000070;
-  color: #3498db;
-  overflow: hidden;
-  position: relative;
-}
-.btn i{
-  line-height: 90px;
-  font-size: 26px;
-  transition: 0.2s linear;
-}
-.btn:hover i{
-  transform: scale(1.3);
-  color: #f1f1f1;
-}
-.btn::before{
-  content: "";
-  position: absolute;
-  width: 120%;
-  height: 120%;
-  background: #3498db;
-  transform: rotate(45deg);
-  left: -110%;
-  top: 90%;
-}
-.btn:hover::before{
-  animation: aaa 0.7s 1;
-  top: -10%;
-  left: -10%;
-}
-@keyframes aaa {
-  0%{
-    left: -110%;
-    top: 90%;
-  }50%{
-    left: 10%;
-    top: -30%;
-  }100%{
-    top: -10%;
-    left: -10%;
-  }
+  *{
+    margin: 0;
+    padding: 0;
+    font-family: "Open Sans",sans-serif;
 }
 
+.team-section{
+    height: 100vh;
+    display: flex;
+}
+
+.person{
+    flex: 1;
+    overflow: hidden;
+    cursor: pointer;
+    position: relative;
+    transition: .6s;
+}
+
+.person:hover{
+    flex: 3;
+}
+
+.person-pic{
+    position: absolute;
+    height: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    filter: grayscale(80%);
+    transition: .3s;
+}
+
+.person:hover .person-pic{
+    filter: grayscale(0);
+}
+
+.person-info{
+    position: absolute;
+    bottom: 10px;
+    text-align: center;
+    width: 100%;
+    opacity: 0;
+    transition: .2s;
+}
+
+.person:hover .person-info{
+    opacity: 1;
+    bottom: 60px;
+    transition-delay: .6s;
+}
+
+.person-info h2{
+    font-size: 20px;
+    color: #fff;
+}
+
+.person-info p{
+    color: #b8e994;
+    font-style: italic;
+    margin-top: 8px;
+    margin-bottom: 20px;
+}
+
+.socialmedia a{
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    color: #333;
+    background-color: #b8e994;
+    line-height: 40px;
+    border-radius: 50%;
+    margin: 0 6px;
+    font-size: 18px;
+    transition: .3s linear;
+}
+
+.socialmedia a:hover{
+    color: #b8e994;
+    background-color: transparent;
+    transform: scale(1.5);
+}
   </style>
-  </head>
-  <body>
-    <div class="middle">
-      <a class="btn" href="https://www.facebook.com/fahim.rzs">
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a class="btn" href="https://twitter.com/FahimFaisalOni">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a class="btn" href="https://www.instagram.com/fahim_faiisal/">
-        <i class="fab fa-instagram"></i>
-      </a>
-      <a class="btn" href="https://www.youtube.com/channel/UCSmaY9S8KGitL9LdY8_oXTw">
-        <i class="fab fa-youtube"></i>
-      </a>
-          <a class="btn" href="https://www.youtube.com/channel/UCSmaY9S8KGitL9LdY8_oXTw">
-        <i class="fab fa-linkedin-in"></i>
-      </a>
-    <a class="btn" href="https://www.youtube.com/channel/UCSmaY9S8KGitL9LdY8_oXTw">
-        <i class="fab fa-github"></i>
-      </a>
+</head>
+<body>
+    <div class="team-section">
+        <div class="person">
+            <img src="https://drive.google.com/uc?export=view&id=1yuB3yFA9cqy0a_eoEFTzjWnf6AlRYHN7" alt="" class="person-pic">
+            <div class="person-info">
+                <h2>Sadman Fardin</h2>
+                <p>Data scientist</p>
+                <div class="socialmedia">
+                    <a href="https://www.facebook.com/profile.php?id=100005420179078"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="person">
+            <img src="https://drive.google.com/uc?export=view&id=1GNrD6lHKHJ_MjHPIVB4skmp-CRSeE82K" alt="" class="person-pic">
+            <div class="person-info">
+                <h2>Mohon Dash Tanu</h2>
+                <p>Full-stack developer</p>
+                <div class="socialmedia">
+                    <a href="https://www.facebook.com/tanu.das.7359"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="person">
+            <img src="https://drive.google.com/uc?export=view&id=1o2p1IDL9K1QHtcL3askTpmbEaqJrnqU_" alt="" class="person-pic">
+            <div class="person-info">
+                <h2>Sifat Sahariar</h2>
+                <p>App developer</p>
+                <div class="socialmedia">
+                    <a href="https://www.facebook.com/sunny.sifat.7"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="person">
+            <img src="https://drive.google.com/uc?export=view&id=15zrdHtZveahqiiDuFhcov__G8kwEhjge" alt="" class="person-pic">
+            <div class="person-info">
+                <h2>Showmen Sarker</h2>
+                <p>Network Technician</p>
+                <div class="socialmedia">
+                    <a href="https://www.facebook.com/nosshormanus"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
+        </div>
     </div>
-  </body>
+</body>
 </html>
