--- a/index.html
+++ b/index.html
@@ -1,144 +1,93 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
   <style>
- body
-{
-margin: 0;
-padding: 0;
-background:#00020F;
-font-family: sans-serif;
+  body{
+  padding: 0;
+  margin: 0;
 }
-a{
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%,-50%);
-color:#1670f0;
-padding:30px;
-letter-spacing:2px;
-text-transform:uppercase;
-text-decoration:none;
-box-shadow:0 20px 50px rgba(0,0,0,.5);
-overflow:hidden;
+.middle{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+  text-align: center;
 }
-a:before
-{
-content: '';
-position: absolute;
-top: 2px;
-left: 2px;
-bottom: 2px;
-width: 50%;
-background: rgba(255,255,255,0.05);
+.btn{
+  display: inline-block;
+  width: 90px;
+  height: 90px;
+  background: #f1f1f1;
+  margin: 10px;
+  border-radius: 30%;
+  box-shadow: 0 5px 15px -5px #00000070;
+  color: #3498db;
+  overflow: hidden;
+  position: relative;
 }
-a span:nth-child(1)
-{
-position: absolute;
-top: 0;
-left: 0;
-width: 100%;
-height: 2px;
-background: linear-gradient(to right,#0c002b,#1779ff);
-animation: animate1 2s linear infinite;
+.btn i{
+  line-height: 90px;
+  font-size: 26px;
+  transition: 0.2s linear;
 }
-@keyframes animate1
-{
- 0%
- {
-   transform:translateX(-100%);
- 
- }
- 100%
- {
-   transform:translateX(100%);
- 
- }
+.btn:hover i{
+  transform: scale(1.3);
+  color: #f1f1f1;
 }
-a span:nth-child(2)
-{
-position: absolute;
-top: 0;
-right: 0;
-width: 2px;
-height: 100%;
-background: linear-gradient(to bottom,#0c002b,#1779ff);
-animation: animate2 2s linear infinite;
-animation-delay: 1s;
+.btn::before{
+  content: "";
+  position: absolute;
+  width: 120%;
+  height: 120%;
+  background: #3498db;
+  transform: rotate(45deg);
+  left: -110%;
+  top: 90%;
 }
-@keyframes animate2 
-{
- 0%
- {
-   transform:translateY(-100%);
- 
- }
- 100%
- {
-   transform:translateY(100%);
- 
- }
+.btn:hover::before{
+  animation: aaa 0.7s 1;
+  top: -10%;
+  left: -10%;
 }
-a span:nth-child(3)
-{
-position: absolute;
-bottom: 0;
-left: 0;
-width: 100%;
-height: 2px;
-background: linear-gradient(to left,#0c002b,#1779ff);
-animation: animate3 2s linear infinite;
+@keyframes aaa {
+  0%{
+    left: -110%;
+    top: 90%;
+  }50%{
+    left: 10%;
+    top: -30%;
+  }100%{
+    top: -10%;
+    left: -10%;
+  }
 }
-@keyframes animate3
-{
- 0%
- {
-   transform:translateX(100%);
- 
- }
- 100%
- {
-   transform:translateX(-100%);
- 
- }
-}
-a span:nth-child(4)
-{
-position: absolute;
-top: 0;
-left: 0;
-width: 2px;
-height: 100%;
-background: linear-gradient(to top,#0c002b,#1779ff);
-animation: animate4 2s linear infinite;
-animation-delay: 1s;
-}
-@keyframes animate4 
-{
- 0%
- {
-   transform:translateY(100%);
- 
- }
- 100%
- {
-   transform:translateY(-100%);
- 
- }
-}
- </style>
+
+  </style>
   </head>
   <body>
-   
-<a href="https://www.facebook.com/">
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  The BroCode
-  </a>
+    <div class="middle">
+      <a class="btn" href="https://www.facebook.com/fahim.rzs">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a class="btn" href="https://twitter.com/FahimFaisalOni">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a class="btn" href="https://www.instagram.com/fahim_faiisal/">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a class="btn" href="https://www.youtube.com/channel/UCSmaY9S8KGitL9LdY8_oXTw">
+        <i class="fab fa-youtube"></i>
+      </a>
+          <a class="btn" href="https://linkedin.com/in/s-m-fahim-faisal-53136a1a6">
+        <i class="fab fa-linkedin-in"></i>
+      </a>
+    <a class="btn" href="https://github.com/FahimOni">
+        <i class="fab fa-github"></i>
+      </a>
+    </div>
   </body>
-</html>a
+</html>
